# teleai_dds_wrapper

./: .gitignore  README.md  compile_thirdparty.sh  py_pub_realsense.py  py_sub_realsense.py  pyproject.toml  verify_all_types.py
commonInfo/msg/: .idlpy_manifest
commonInfo/msg/dds_/: __init__.py  _commoninfo.py
idl/: commoninfo.idl
teleai_dds_wrapper/: __init__.py  _bootstrap.py
teleai_dds_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
teleai_dds_wrapper/commonInfo/: .idlpy_manifest  __init__.py
teleai_dds_wrapper/commonInfo/msg/: __init__.py
teleai_dds_wrapper/commonInfo/msg/dds_/: .idlpy_manifest  __init__.py  _commoninfo.py
teleai_dds_wrapper/configs/: cyclonedds.xml  shm_confil.toml
teleai_dds_wrapper/idl/: commoninfo.idl
teleai_dds_wrapper/utils/: __init__.py  logging_utils.py  utils.py
teleai_dds_wrapper/wrapper/: __init__.py  wrapper.py
utils/: utils.py
